--- a/Isoya.tex
+++ b/Isoya.tex
@@ -50,7 +50,8 @@
 }
 \makeatother
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{巨大惑星の移動に伴う小天体の力学的進化}
+\title{巨大惑星の移動に伴う小天体の力学的進化\\
+- 太陽系の歴史をなんとかかんとか -}
 \date{\today}
 \department{
 名古屋大学 理学部物理学科 4年\\
@@ -77,7 +78,7 @@
 
 \section{2 体問題}
 2体問題とは，万有引力の法則で記述される2つの質点の相互作用による運動を考える問題である．2体問題は太陽系力学の中で最も単純で，かつ解析的に解くことができる．また，太陽系には様々な質量の物体があるが，2体問題に近似して考えることができる場面が多く，通常3体目の天体との相互作用は2体の系に対する摂動として扱う．
-\subsection{運動方程式}
+\subsection{運動方程式 \label{sec:EoM}}
 2体問題の例として，質量がそれぞれ $m_1, m_2$ の2つの質点を考える．各点の位置ベクトルは ${\bm r}_1, {\bm r}_2$ である．また，$m_1$ を基準とした $m_2$ の相対ベクトルは ${\bm r} = {\bm r}_2 - {\bm r}_1$ と書ける (図 \ref{fig:A})．2つの質点の運動方程式は以下のように書ける．
 \begin{equation}
 {\bm F}_1 = + G \frac{m_1 m_2}{r^3} {\bm r} = m_1 \ddot{{\bm r}}_1 \quad {\rm and} \quad {\bm F}_2 = - G \frac{m_1 m_2}{r^3} {\bm r} = m_2 \ddot{{\bm r}}_2. \label{eq:F}
@@ -135,7 +136,7 @@ h = r^2 \dot{\theta}.
 \end{equation}
 $h$ は定数であるので，動径が一定時間に横切る軌道面の面積は常に一定であることがわかる．つまり (\ref{eq:kepler2}) は Kepler の第2法則 と等価である．しかし，このことは万有引力に対してのみ成り立つ訳ではなく，2物体の間に引力が働いていれば成り立つ．
 
-\subsection{軌道と速度}
+\subsection{軌道と速度 \label{sec:position&velocity}}
 (\ref{eq:polar}) 式の $\ddot{{\bm r}}$ を (\ref{eq:raletive}) 式に代入することで，相対運動のスカラー方程式を求めることができる．$r$ 成分を比べると，
 \begin{equation}
 \ddot{r} - r \dot{\theta}^2 = - \frac{\mu}{r^2}. \label{eq:scalar}
@@ -273,7 +274,7 @@ M = n (t - \tau). \label{eq:M}
 \end{equation}
 ここで，$\tau$ は近点通過時刻．$M$ は角度の次元であり，平均運動と等しい一定の割合で線形的に増加するが，幾何学的に意味のある値ではない．しかし，$M$ の定義と (\ref{eq:rf}) 式から，$t = \tau$ (近点を通過) や $t = \tau + T / 2$ (遠点を通過) のとき，それぞれ $M = f =0, M = f = \pi$ となることは明らかである．$t$ が周期の整数倍のときも同様の関係を持つ．
 
-$M$ は幾何学的に意味のある値ではないが，ある角度と関係がある．半径 $a$ の円を，軌道長半径 $a$，離心率 $e$ の楕円に外接させ (図 \ref{fig:Ef} (a))，その楕円の長軸に垂直な直線を引き，外接円に交差させる． すると，$f = 0$ の基準線と，楕円の中心からその外接円上の交点までを結ぶ直線とのなす角で定義される，離心近点離角 $E$ という角度を決めることができる (図 \ref{fig:Ef} (b))．したがって，$E = 0$ は $f = 0$ と一致し，したがって，$E = \pi$ は $f = \pi$ と一致する．
+$M$ は幾何学的に意味のある値ではないが，ある角度と関係がある．半径 $a$ の円を，軌道長半径 $a$，離心率 $e$ の楕円に外接させ (図 \ref{fig:Ef} (a))，その楕円のある点から長軸に垂直な直線を引き，外接円に交差させる． すると，$f = 0$ の基準線 (長軸) と，楕円の中心からその外接円上の交点までを結ぶ直線とのなす角で定義される，離心近点離角 $E$ という角度を決めることができる (図 \ref{fig:Ef} (b))．したがって，$E = 0$ は $f = 0$ と一致し，$E = \pi$ は $f = \pi$ と一致する．
 
 \begin{figure}[H]
 \centering
@@ -332,12 +333,29 @@ M = E - e \sin E. \label{eq:keplereq}
 この式は Kepler 方程式と呼ばれ，その解は，任意の時間における軌道上の位置を求める際になくてはならないものである．ある時間が与えられたとき，(i) (\ref{eq:M}) 式から $M$ を求め，(ii) $E$ について (\ref{eq:keplereq}) 式を解き，(iii) (\ref{eq:xEyE}) 式または (\ref{eq:fE}) 式と，(\ref{eq:rf}) 式を使って$r, f$ を決める．
 
 \subsection{軌道要素}
+ \ref{sec:EoM} 節では，m1 に対する m2 の相対位置ベクトルと速度ベクトルが，常に角運動量ベクトルに垂直な平面上に存在することを示した．m2 の ${\bm r} = (x, y)$ と $\dot{\bm r} = (\dot{x}, \dot{y})$ は3つの定数 $a, e, \varpi$ と変数 $f$ によって固有の値をもつ．ここまでの解析では軌道面上の運動を理解してきた．しかし，太陽系の天体の運動は単一の基準面上で起こるものではなく，ここからは軌道の3次元表現を考えていく (図 \ref{fig:elements_SSD})．
+ 
+任意の位置が位置ベクトル ${\bm r} = (x, y, z) = x \hat{\bm x} + y \hat{\bm y} + z \hat{\bm z}$ で表現される3次元直交座標系を考える．3つの軸が右手系をなすように，$x$ 軸は楕円軌道の長軸上の近点の方向，$y$ 軸は 軌道面上の$x$ 軸に垂直な方向，そして $z$ 軸は $x, y$ 軸両方に垂直で $\hat{\bm x} \times \hat{\bm y}$ の方向にとる．
+
+この軌道面から基準面を参照するために，基準面上の基準線の方向を $X$ 軸にとるような別の3次元直交座標系を考える．上と同様に3つの軸が右手系をなすように，$Y$  軸は基準面上の$X$ 軸に垂直な方向，そして $Z$ 軸は $X, Y$ 軸両方に垂直で $\hat{\bm X} \times \hat{\bm Y}$ の方向にとる．この座標系の例として，太陽のまわりを回る惑星の運動の場合，日心座標系 (太陽を中心とし，基準面を地球軌道面 (黄道面)，基準線を地球の赤道面と黄道面の交線に沿った方向，すなわち春分の方向にとる座標系) が慣習的に使われる．注意すべきことは，他の天体による摂動を受けるため，特定の基準面を決めてもその基準面は時間変化してしまうことである．
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=10cm]{./image/sec2_13.pdf}
-\caption{\label{}}
+\caption{\label{fig:elements_SSD}}
 \end{figure}
+
+一般に軌道面は基準面に対して軌道傾斜角 (inclination，$I$) と呼ばれる角度だけ傾いている．軌道面と基準面が交わる線を交線 (line of nodes) と呼ぶ．基準面に対して下から上に軌道が横切る際の交点を昇交点 (ascending node)，基準線と昇交点の動径ベクトルのなす角を昇交点経度 (longitude of ascending node，$\Omega$) と呼ぶ．昇交点の動径ベクトルと近点の方向のなす角を近日点引数 (argument of perisentre，$\omega$) と呼ぶ．
+
+軌道傾斜角は常に $0 \leq I \leq 180^{\circ}$ である．$I \leq 90 ^{\circ}$ の場合は順行 (prograde)，一方 $I \geq 90 ^{\circ}$ の場合は逆行 (retrograde) と呼ぶ．
+
+$I \to 0$ の極限では軌道面は基準面と同一平面上に存在し，
+\begin{equation}
+\varpi = \Omega + \omega \label{eq:varpi}
+\end{equation}
+ここで $\varpi$ は \ref{sec:position&velocity} 節で導入した近日点経度である．しかし $\Omega$ と $\omega$ は異なる平面上の角度でにも関わらず， (\ref{eq:varpi}) の $\varpi$ の定義は軌道が傾いている場合にも使われる．ゆえに，$\varpi$ は "dogleg" 角
+
+
 
 \begin{equation}
 \begin{pmatrix}
